--- a/BGpt/templates/BGpt/layout.html
+++ b/BGpt/templates/BGpt/layout.html
@@ -20,9 +20,13 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Pricing</a>
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              {% if user.is_authenticated %}
+              <a class="nav-link" href="#">Profile</a>
+              <a class="nav-link" href="#">Logout</a>
+              {% else %}
+              <a class="nav-link" href="{% url 'register' %}">Register</a>
+              <a class="nav-link" href="#">Log In</a>
+              {% endif %}
             </div>
           </div>
         </div>
