implement clientside recording

--- a/BGpt/templates/BGpt/layout.html
+++ b/BGpt/templates/BGpt/layout.html
@@ -34,4 +34,7 @@
 
       <div class="body">{% block body %}{% endblock %}</div>
 </body>
+<footer>
+    {% block page_scripts %}{% endblock %}
+</footer>
 </html>
