--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -6,4 +6,16 @@ TODO:
 <p>framework for text interface></p>
 <p>framework for audio/mic interface</p>
 <p>user/login/register  interface (modal?)</p>
+
+<!-- <audio id="recorder" controls></audio> -->
+<button id="btn-start"> Start Recording</button>
+<button id="btn-stop"> Stop Recording</button>
+<br>
+<audio controls id="playback"></audio>
+{% endblock %}
+
+
+
+{% block page_scripts %}
+<script src="static/BGpt/audio.js"></script>
 {% endblock %}
