--- a/BGpt/templates/BGpt/layout.html
+++ b/BGpt/templates/BGpt/layout.html
@@ -6,8 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static 'BGpt/styles.css' %}" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
@@ -26,14 +25,19 @@
               <a class="nav-link" href="#">Logout</a>
               {% else %}
               <a class="nav-link" href="{% url 'register' %}">Register</a>
-              <a class="nav-link" href="#">Log In</a>
+              <!-- pre modal -->
+              <!-- <a class="nav-link" href="#">Log In</a> -->
+              <a class="nav-link" href="#" data-toggle="modal" data-target="exampleModal">Log In</a> 
               {% endif %}
             </div>
           </div>
         </div>
       </nav>
 
-      <div class="body">{% block body %}{% endblock %}</div>
+      <div class="body">
+        {% block body %}
+        {% endblock %}
+      </div>
 </body>
 <footer>
     {% block page_scripts %}{% endblock %}
