--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -9,7 +9,7 @@ TODO:
 
 <!-- <audio id="recorder" controls></audio> -->
 <button id="btn-start"> Start Recording</button>
-<button id="btn-stop"> Stop Recording</button>
+<button id="btn-stop" style="display: none;"> Stop Recording</button>
 <button id="btn-replay" style="display: none;">Replay Audio</button>
 <br>
 <!-- <audio controls id="playback"></audio> -->
