--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -8,11 +8,13 @@ TODO:
 <p>user/login/register  interface (modal?)</p>
 
 <!-- <audio id="recorder" controls></audio> -->
-<button id="btn-start"> Start Recording</button>
-<button id="btn-stop" style="display: none;"> Stop Recording</button>
-<button id="btn-replay" style="display: none;">Replay Audio</button>
+<button id="btn-start" class="btn btn-prim"> <i class="fa-solid fa-microphone"></i> Start Recording</button>
+<button id="btn-stop" class="btn btn-prim" style="display: none;"><i class="fa-solid fa-microphone-slash"></i>Stop Recording</button>
+<button id="btn-replay" class="btn btn-prim" style="display: none;"><i class="fa-solid fa-repeat"></i>Replay Audio</button>
 <br>
 <!-- <audio controls id="playback"></audio> -->
+
+<div id="response"></div>
 
 {% endblock %}
 
