--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -1,15 +1,23 @@
 body .btn-prim {
   background-color: #ffffff;
-  color: #be3131;
+  color: #ff2d2d;
   font-weight: bold;
   border-width: 1px;
   border-style: solid;
   border: #2b0000;
-  box-shadow: 7px 3px 3px #153f2f;
+  box-shadow: 7px 3px 3px #0f4d32;
 }
 body .btn-prim:hover {
-  background-color: #97d954;
-  color: #070760;
+  background-color: #2b0000;
+  color: #ffffff;
+}
+body #register-cont {
+  display: none;
+  flex-direction: column;
+}
+body #login-cont {
+  display: flex;
+  flex-direction: column;
 }
 
 /*# sourceMappingURL=styles.css.map */
