--- a/BGpt/templates/BGpt/register.html
+++ b/BGpt/templates/BGpt/register.html
@@ -3,21 +3,58 @@
 
 {% block body %}
 
+<button type="button" class="btn-prim" id="login">Login</button>
+<button type="button" class="btn-prim" id="register">Register</button>
 <!-- REG FORM - will be shown on click? -->
-<form action="{% url 'register' %}" method="post" autocomplete="off">
-    {% csrf_token %}
-    <div class="form-group">
-        <input class="form-control" autofocus type="text" name="username" placeholder="Username">
-    </div>
-    <div class="form-group">
-        <input class="form-control" type="email" name="email" placeholder="Email Address">
-    </div>
-    <div class="form-group">
-        <input class="form-control" type="password" name="password" placeholder="Password">
-    </div>
-    <div class="form-group">
-        <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-    </div>
-    <button type="submit" class="btn">Submit</button>
-</form>
+<div id="register-cont">
+    <form action="{% url 'register' %}" method="post" autocomplete="off">
+        {% csrf_token %}
+        <div class="form-group">
+            <input class="form-control" autofocus type="text" name="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="email" name="email" placeholder="Email Address">
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="password" name="password" placeholder="Password">
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+        </div>
+        <button type="submit" class="btn">Submit</button>
+    </form>
+</div>
+
+<!-- Login Form -->
+<div id="login-cont">
+    <form action="{% url 'login' %}" method="post" autocomplete="off">
+        {% csrf_token %}
+        <div class="form-group">
+            <input class="form-control" autofocus type="text" name="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="password" name="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn">Submit</button>
+    </form>
+</div>
+{% endblock %}
+{% block page_scripts %}
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const login_btn = document.querySelector("#login");
+        const reg_btn = document.querySelector("#register");
+        const login = document.querySelector("#login-cont");
+        const reg = document.querySelector("#register-cont");
+
+        reg_btn.addEventListener('click', () => {
+            login.style.display = 'none';
+            reg.style.display = 'flex';
+        });
+        login_btn.addEventListener('click', () => {
+            login.style.display = 'flex';
+            reg.style.display = 'none';
+        });
+    });
+</script>
 {% endblock %}
