--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -5,7 +5,6 @@ body .btn-prim {
   border-width: 1px;
   border-style: solid;
   border: #2b0000;
-  box-shadow: 7px 3px 3px #0f4d32;
 }
 body .btn-prim:hover {
   background-color: #2b0000;
@@ -14,10 +13,21 @@ body .btn-prim:hover {
 body #register-cont {
   display: none;
   flex-direction: column;
+  align-items: center;
 }
 body #login-cont {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 5px 5px 5px 5px;
+}
+body .form-group {
+  margin-bottom: 5px;
+}
+body .btn-cont {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
