--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -19,8 +19,9 @@ body{
         font-weight: bold;
         border-width: 1px;
         border-style: solid;
+        // border-radius: 5px;
         border: $black;
-        box-shadow: 7px 3px 3px $green-drk ;
+        // box-shadow: 7px 3px 3px $green-drk ;
     }
     .btn-prim:hover{
         background-color: $black;
@@ -29,9 +30,21 @@ body{
     #register-cont{
         display: none;
         flex-direction: column;
+        align-items: center;
     }
     #login-cont{
         display: flex;
         flex-direction: column;
+        align-items: center;
+        padding: 5px 5px 5px 5px;
+    }
+    .form-group{
+        margin-bottom: 5px;
+    }
+    .btn-cont{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        // align-items: center;
     }
 }
