--- a/BGpt/templates/BGpt/layout.html
+++ b/BGpt/templates/BGpt/layout.html
@@ -21,13 +21,12 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
               {% if user.is_authenticated %}
-              <a class="nav-link" href="#">Profile</a>
-              <a class="nav-link" href="#">Logout</a>
+              <a class="nav-link" href="#">{{ user.username }}</a>
+              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
-              <a class="nav-link" href="{% url 'register' %}">Register</a>
-              <a class="nav-link" href="{% url 'login' %}">Log In</a>
+              <a class="nav-link" href="{% url 'register' %}">Register / Login</a>
               {% endif %}
             </div>
           </div>
