--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -29,5 +29,10 @@ body .btn-cont {
   flex-direction: row;
   justify-content: center;
 }
+body .message {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
 /*# sourceMappingURL=styles.css.map */
