--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -47,4 +47,9 @@ body{
         justify-content: center;
         // align-items: center;
     }
+    .message{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
 }
