--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -42,9 +42,9 @@ body #response {
   border: 10px solid red;
   flex-direction: row;
   flex-wrap: wrap;
-  max-width: 40%;
+  max-width: 80%;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin: auto;
 }
 
