--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -61,9 +61,9 @@ body{
         border: 10px solid red;
         flex-direction: row;
         flex-wrap: wrap;
-        max-width: 40%;
+        max-width: 80%;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-start;
         margin: auto;
     }
 }
