--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -56,7 +56,13 @@ body{
         flex-direction: row;
         justify-content: center;
     }
-    #response{
+    #resp-cont{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #response, #resp-trans{
         display: flex;
         border: 10px solid red;
         flex-direction: row;
