--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -7,6 +7,7 @@ TODO:
 <p>framework for audio/mic interface</p>
 <p>user/login/register  interface (modal?)</p>
 
+{% if user.is_authenticated %}
 <!-- <audio id="recorder" controls></audio> -->
 <h3>Please select the model for transcription, this defines the speed/accuracy of the speech to text</h3>
 <select name="model" id="model_selector">
@@ -22,6 +23,9 @@ TODO:
 <button type="button" class="btn btn-prim" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Load Previous Chat
 </button>
+{% else %}
+<h3><a href="{% url 'login' %}">Login here to start chatting!</a></h3>
+{% endif %}
 <br>
 <!-- <audio controls id="playback"></audio> -->
 <div id="resp-cont">
