Add chat session logic

--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -27,7 +27,7 @@ TODO:
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Let's Chat!</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close cls-sess" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <h3>Please select the model for transcription, this defines the speed/accuracy of the speech to text</h3>
@@ -47,7 +47,7 @@ TODO:
       </div>
       <div class="modal-footer">
         <!-- <button type="button" class="btn btn-sec" data-bs-dismiss="modal">Close</button> -->
-        <button type="button" class="btn btn-prim">Close session</button>
+        <button type="button" class="btn btn-prim cls-sess" data-bs-dismiss="modal">Close session</button>
       </div>
     </div>
   </div>
