implement eng -> bg version

--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -31,7 +31,7 @@ TODO:
       </div>
       <div class="modal-body">
         <h6>Please which language you speak, and which language you wish to translate to:</h6>
-        <select name="model" id="lang_selector">
+        <select name="lang" id="lang_selector">
             <option value="bg-en" selected="selected">BG -> ENG</option>
             <option value="en-bg">ENG -> BG</option>
         </select>
