--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -2,6 +2,20 @@
 {% load static %}
 
 {% block body %}
+
+<div id="bgpt-logo-cont">
+  <h1>B</h1>
+  <h1>G</h1>
+  <h3>p</h3>
+  <h3>t</h3>
+</div>
+
+<div id="welcome">
+  <h1>Welcome to BGpt.</h1>
+  <h4>The first iteration of a conversational language learning tool, helping to practise vocalising languages.</h4>
+
+</div>
+
 TODO:
 <p>framework for text interface></p>
 <p>framework for audio/mic interface</p>
