--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -83,4 +83,30 @@ body{
         justify-content: flex-start;
         margin: auto;
     }
+    #bgpt-logo-cont{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background-image: linear-gradient(to bottom, #FFFFFF, #00966E, #D62612);
+
+        h1{
+            font-size: 10em;
+            color: white;
+        }
+        h3{
+            font-size: 3em;
+        }
+        
+    }
+    #welcome{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        h4{
+            max-width: 50%;
+            // text-wrap: balance
+        }
+    }
 }
