--- a/BGpt/templates/BGpt/layout.html
+++ b/BGpt/templates/BGpt/layout.html
@@ -14,9 +14,9 @@
     <title>{% block title %}BGpt: Conversational Language Learning{% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">BGpt</a>
+          <a class="navbar-brand" href="/">BGpt</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,7 +27,8 @@
               <a class="nav-link" href="#">{{ user.username }}</a>
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
-              <a class="nav-link" href="{% url 'register' %}">Register / Login</a>
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+              <a class="nav-link" href="{% url 'register' %}">Register</a>
               {% endif %}
             </div>
           </div>
