--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -109,4 +109,9 @@ body{
             // text-wrap: balance
         }
     }
+    .nav{
+        .bg-light2{
+            background-color: white;
+        }
+    }
 }
