--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -9,71 +9,71 @@
   <h3>p</h3>
   <h3>t</h3>
 </div>
+<div id="index-bod">
+  <div id="welcome">
+    <h1>Welcome to BGpt.</h1>
+    <h4>The first iteration of a conversational language learning tool, helping to practise vocalising languages.</h4>
 
-<div id="welcome">
-  <h1>Welcome to BGpt.</h1>
-  <h4>The first iteration of a conversational language learning tool, helping to practise vocalising languages.</h4>
+  </div>
 
-</div>
+  TODO:
+  <p>framework for text interface></p>
+  <p>framework for audio/mic interface</p>
+  <p>user/login/register  interface (modal?)</p>
 
-TODO:
-<p>framework for text interface></p>
-<p>framework for audio/mic interface</p>
-<p>user/login/register  interface (modal?)</p>
+  {% if user.is_authenticated %}
+  <!-- Button trigger chat_window modal -->
+  <button type="button" class="btn btn-prim" data-bs-toggle="modal" data-bs-target="#chat_window">
+    Let's Chat!
+  </button>
+  <!-- Button trigger chat_history modal -->
+  <button type="button" class="btn btn-prim" data-bs-toggle="modal" data-bs-target="#chat_history">
+    Load Previous Chat
+  </button>
+  {% else %}
+  <h3><a href="{% url 'login' %}">Login here to start chatting!</a></h3>
+  {% endif %}
+  <br>
 
-{% if user.is_authenticated %}
-<!-- Button trigger chat_window modal -->
-<button type="button" class="btn btn-prim" data-bs-toggle="modal" data-bs-target="#chat_window">
-  Let's Chat!
-</button>
-<!-- Button trigger chat_history modal -->
-<button type="button" class="btn btn-prim" data-bs-toggle="modal" data-bs-target="#chat_history">
-  Load Previous Chat
-</button>
-{% else %}
-<h3><a href="{% url 'login' %}">Login here to start chatting!</a></h3>
-{% endif %}
-<br>
-
-<!-- Start Chatting Modal -->
-<div class="modal fade" id="chat_window" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="chat_window" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Let's Chat!</h1>
-        <button type="button" class="btn-close cls-sess" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <h6>Please which language you speak, and which language you wish to translate to:</h6>
-        <select name="lang" id="lang_selector">
-            <option value="bg-en" selected="selected">BG -> ENG</option>
-            <option value="en-bg">ENG -> BG</option>
-        </select>
-        <h6>Please select the model for transcription, this defines the speed/accuracy of the speech to text</h6>
-        <select name="model" id="model_selector">
-            <option value="base">Base ~20 seconds response time (Inaccurate)</option>
-            <option value="med" selected="selected">Medium ~1 minute response time (Recommended) </option>
-            <option value="large">Large ~3 minute response time (Accurate)</option>
-        </select>
-        <input type="text" name="title" id="chat-title" placeholder="Give this chat a title?">
-        <button id="btn-start" class="btn btn-prim"> <i class="fa-solid fa-microphone"></i> Start Recording</button>
-        <button id="btn-stop" class="btn btn-prim" style="display: none;"><i class="fa-solid fa-microphone-slash"></i> Stop Recording</button>
-        <button id="btn-replay" class="btn btn-prim" style="display: none;"><i class="fa-solid fa-repeat"></i> Replay Audio</button>
-        <br>
-        <div id="resp-cont">
-          <div id="response"></div>
-          <div id="resp-trans"></div>
+  <!-- Start Chatting Modal -->
+  <div class="modal fade" id="chat_window" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="chat_window" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Let's Chat!</h1>
+          <button type="button" class="btn-close cls-sess" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-      </div>
-      <div class="modal-footer">
-        <!-- <button type="button" class="btn btn-sec" data-bs-dismiss="modal">Close</button> -->
-        <button type="button" class="btn btn-prim cls-sess" data-bs-dismiss="modal">Close session</button>
+        <div class="modal-body">
+          <h6>Please which language you speak, and which language you wish to translate to:</h6>
+          <select name="lang" id="lang_selector">
+              <option value="bg-en" selected="selected">BG -> ENG</option>
+              <option value="en-bg">ENG -> BG</option>
+          </select>
+          <h6>Please select the model for transcription, this defines the speed/accuracy of the speech to text</h6>
+          <select name="model" id="model_selector">
+              <option value="base">Base ~20 seconds response time (Inaccurate)</option>
+              <option value="med" selected="selected">Medium ~1 minute response time (Recommended) </option>
+              <option value="large">Large ~3 minute response time (Accurate)</option>
+          </select>
+          <input type="text" name="title" id="chat-title" placeholder="Give this chat a title?">
+          <button id="btn-start" class="btn btn-prim"> <i class="fa-solid fa-microphone"></i> Start Recording</button>
+          <button id="btn-stop" class="btn btn-prim" style="display: none;"><i class="fa-solid fa-microphone-slash"></i> Stop Recording</button>
+          <button id="btn-replay" class="btn btn-prim" style="display: none;"><i class="fa-solid fa-repeat"></i> Replay Audio</button>
+          <br>
+          <div id="resp-cont">
+            <div id="response"></div>
+            <div id="resp-trans"></div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <!-- <button type="button" class="btn btn-sec" data-bs-dismiss="modal">Close</button> -->
+          <button type="button" class="btn btn-prim cls-sess" data-bs-dismiss="modal">Close session</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-  
+    
   <!-- Chat History Modal -->
   <div class="modal fade" id="chat_history" tabindex="-1" aria-labelledby="chat_history" aria-hidden="true">
     <div class="modal-dialog">
@@ -101,7 +101,7 @@ TODO:
       </div>
     </div>
   </div>
-
+</div>
 {% endblock %}
 
 
