--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -88,11 +88,11 @@ body{
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        background-image: linear-gradient(to bottom, #FFFFFF, #00966E, #D62612);
+        // background-image: linear-gradient(to bottom, #FFFFFF, #00966E, #D62612);
+        background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSI_i6Fof5rOuhRPBSn-OqZWhjn82TCwBw3MXYXSOr9WYwM2JkV-IZcnrx6zO3iGbBRuJs&usqp=CAU);
 
         h1{
             font-size: 10em;
-            color: white;
         }
         h3{
             font-size: 3em;
@@ -109,9 +109,13 @@ body{
             // text-wrap: balance
         }
     }
-    .nav{
-        .bg-light2{
-            background-color: white;
-        }
-    }
+    // .nav{
+    //     .bg-light2{
+    //         background-color: white;
+    //         box-shadow: 5px 5px;
+    //     }
+    // }
+    // #index-bod{
+    //     // background-image: url(https://freesofiatour.com/wp-content/uploads/2018/05/seven-rila-lakes-how-to-get-to-1200x675.jpeg);
+    // }
 }
