--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -104,18 +104,8 @@ body{
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        h4{
-            max-width: 50%;
-            // text-wrap: balance
-        }
     }
-    // .nav{
-    //     .bg-light2{
-    //         background-color: white;
-    //         box-shadow: 5px 5px;
-    //     }
-    // }
-    // #index-bod{
-    //     // background-image: url(https://freesofiatour.com/wp-content/uploads/2018/05/seven-rila-lakes-how-to-get-to-1200x675.jpeg);
-    // }
+    .display-4{
+        text-align: center;
+    }
 }
