--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -32,6 +32,35 @@
     {% endif %}
   </div>
 
+  <div id="card-cont">
+    <div class="card">
+      <div class="card-body">
+        <h3 class="card-head">What is BGpt</h3>
+        <p>
+          A conversational language tool that feeds audio to AI and generates topical responses. 
+        </p>
+        <p>
+          BGpt is the effort of an Irishman living in Sofia to adapt his attempt to learn a language.
+        </p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h3>
+          What is it's purpose?
+        </h3> 
+        <p>
+          The world has changed quite a bit since 2020, most people working from their homes and day to day interaction has suffered because of it. 
+          I found myself understanding the basics internally, but vocalising was a different scenario.
+        </p>
+        <p>
+          Using the recent influx of AI tools at hand, I set out to create something that allowed me to  work on 
+          conversational skills in passing, rather than looking at notes and using flashcards. 
+        </p>  
+      </div>
+    </div>
+  </div>
+
   TODO:
   <p>framework for text interface></p>
   <p>framework for audio/mic interface</p>
