--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -86,5 +86,21 @@ body #welcome {
 body .display-4 {
   text-align: center;
 }
+body #card-cont {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10% 5% 10% 5%;
+  border-radius: var(--bs-border-radius);
+}
+body #card-cont > * {
+  box-shadow: 10px 10px 10px black;
+}
+@media (max-width: 600px) {
+  body #card-cont {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
