--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -112,7 +112,7 @@ body{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        margin: 10% 5% 10% 5%;
+        margin: 5% 5% 10% 5%;
         border-radius:  var(--bs-border-radius);
     }
     #card-cont > * {
@@ -123,9 +123,16 @@ body{
             flex-direction: column;
             align-items: center;
         }
+        .card{
+            margin-bottom: 50px;
+        }
     }
     
 }
 .card-body{
-    max-width: 400px;
+    max-width: 500px;
+}
+#navbarNavAltMarkup{
+    justify-content: center;
+    padding: 0 5% 0 5%
 }
